# gnschool

./: .gitignore  pyproject.toml  requirements.txt
account/: admin.py  models.py
account/migrations/: 0001_initial.py
core/: admin.py  models.py  urls.py
core/migrations/: 0001_initial.py  0002_schoolyear.py  0003_grade.py  0004_gradeoption_level.py  0005_schoolyearlevel.py  0006_alter_schoolyearlevel_options_and_more.py  0007_classroom.py  0008_grade_has_option_delete_classroom.py  0009_classroom.py  0010_alter_grade_has_option.py  0011_subject_classroomsubject_and_more.py  0012_student_teacher.py
myapp/: settings.py  urls.py
templates/: home.html
templates/cotton/: card.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
