[project]
name = "dj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.1",
    "django-cotton>=2.1.2",
    "django-htmx>=1.23.0",
    "django-tailwind[reload]>=4.0.1",
    "pillow>=11.2.1",
    "tzdata>=2025.2",
]
